# realsense-pcl

./: .gitignore  README.md  build.ps1  cmake.ps1  run.ps1
data/: nist.pcd  rotated_sampled.pcd  sampled.pcd
src/: CMakeLists.txt  align.hpp  alignment_prerejective.cpp  convert_stl.hpp  main.cpp  realsense.hpp  registration.hpp  transform.hpp  view.hpp
